[tool.poetry]
name = "squad_test_site"
version = "0.1.0"
description = ""
authors = ["Ayuei <sefton_student@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
transformers = "^4.10.0"
datasets = "^1.11.0"
torch = "^1.9.0"
tqdm = "^4.62.2"
sentence-transformers = "^2.0.0"
pytorch-lightning = "^1.4.5"

[tool.poetry.dev-dependencies]
jupyter = "^1.0.0"
seaborn = "^0.11.2"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
